--- a/contact-me.html
+++ b/contact-me.html
@@ -9,8 +9,8 @@
 <body>
     <h3>My Contact Details</h3>
         <ul>
-            <li>Email: taeyoungkim.translation@gmail.com</li>
-            <li>Mobile: +82-10-7407-9545</li>
+            <li>Email: *********@gmail.com</li>
+            <li>Mobile: +82-10-****-****</li>
         </ul>
     
     <form class="" action="mailto: taeyoungkim.translation@gmail.com" method="post">
