--- a/contact-me.html
+++ b/contact-me.html
@@ -10,7 +10,7 @@
     <h3>My Contact Details</h3>
         <ul>
             <li>Email: *********@gmail.com</li>
-            <li>Mobile: +82-10-****-****</li>
+            <li>Mobile: +82-**-****-****</li>
         </ul>
     
     <form class="" action="mailto: taeyoungkim.translation@gmail.com" method="post">
